--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ scipy = "^1.14.1"
 statsmodels = "^0.14.4"
 matplotlib = "^3.9.2"
 seaborn = "^0.13.2"
+ipykernel = "^6.29.5"
 
 
 [tool.poetry.group.dev.dependencies]
